Adding text description

--- a/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 3/Analyzing product sentiment-Assignement.ipynb
+++ b/Specializations/Machine Learning/Machine Learning Foundations A Case Study Approach/Week 3/Analyzing product sentiment-Assignement.ipynb
@@ -1298,7 +1298,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Out of the 11 words in selected_words, which one is most used in the reviews in the dataset?"
+    "## Out of the 11 words in selected_words, which one is most used in the reviews in the dataset?\n",
+    "\n",
+    "## Out of the 11 words in selected_words, which one is least used in the reviews in the dataset?"
    ]
   },
   {
